WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159057
[Win] The test accessibility/aria-labelledby-overrides-label.html is failing.
https://bugs.webkit.org/show_bug.cgi?id=159057
Summary
[Win] The test accessibility/aria-labelledby-overrides-label.html is failing.
Per Arne Vollan
Reported
2016-06-23 09:28:25 PDT
The test expects the label to have a static text role, but currently it has a group role.
Attachments
Patch
(1.64 KB, patch)
2016-06-23 09:33 PDT
,
Per Arne Vollan
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-06-23 09:33:25 PDT
Created
attachment 281911
[details]
Patch
Brent Fulgham
Comment 2
2016-06-23 09:38:23 PDT
Comment on
attachment 281911
[details]
Patch R=me
Per Arne Vollan
Comment 3
2016-06-23 11:52:04 PDT
(In reply to
comment #2
)
> Comment on
attachment 281911
[details]
> Patch > > R=me
Thanks for reviewing :)
Per Arne Vollan
Comment 4
2016-06-23 22:21:53 PDT
Committed
r202417
: <
https://trac.webkit.org/changeset/202417
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug