[Win] The test accessibility/aria-labelledby-overrides-label.html is failing. https://bugs.webkit.org/show_bug.cgi?id=159057

Reviewed by Brent Fulgham.

The test expects the label to have a static text role, but currently it has a
group role.

* AccessibleBase.cpp:
(MSAARole): Change the role of labels to static text.


Canonical link: https://commits.webkit.org/177177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202417 268f45cc-cd09-0410-ab3c-d52691b4dbfc